profile page left and right sections clickable

--- a/html+css palyground/portfolio/index.html
+++ b/html+css palyground/portfolio/index.html
@@ -14,61 +14,84 @@
   <body>
     <div class="double-slider">
       <div class="left-section">
-        <div class="left-slider">
 
-          <div class="item profile-photo">
-            <img src="./selfie.jpeg" id="selfie">
-          </div>
+        <div class="item profile-photo">
+          <img src="./selfie.jpeg" id="selfie">
+          <h1><a href="#">test</a></h1>
+        </div>
 
-          <div class="item project-list">
-            <p>projects</p>
-            <div class="lists">
-              <p>project list</p>
+        <div class="item skills-left">
+          <span id="skills-title-left">Skill</span>
+
+          <div class="skills-section">
+            <h1>Languages</h1>
+            <a href="#">test</a>
+            <div class="skills-icons">
+              <a href="https://www.linkedin.com/in/shiqin-yan/" target="_blank" rel="noopener noreferrer"><img
+                  src="./linkedin.icon.png" class="skill-icon"></a>
+              <a href="https://www.linkedin.com/in/shiqin-yan/" target="_blank" rel="noopener noreferrer"><img
+                  src="./linkedin.icon.png" class="skill-icon"></a>
             </div>
           </div>
 
+
         </div>
+
+        <div class="item project-list">
+          <p>projects</p>
+          <div class="lists">
+            <p>project list</p>
+          </div>
+        </div>
+
+
       </div>
 
       <div class="right-section">
-        <div class="right-slider">
-          <div class="item profile-text">
-            <div class="bio">
-              <div class="name-sig">
-                <span id="name">Shiqin Yan </span>
-                <img src="./signature.png" id="signature">
-              </div>
 
-              <a href="mailto:shiqin_yan@brown.edu" target="_blank" rel="noopener noreferrer"
-                id="email">shiqin_yan@brown.edu</a>
-
-              <span class="bio-text">I'm Shiqn Yan (shyh-chin yahn), a master's student studying computer science
-                at <a href="https://cs.brown.edu/" target="_blank" rel="noopener noreferrer">
-                  Brown University</a>. I’m passionate about solving various real-world
-                problems with my CS skills 🤔. </span>
-              <span class="bio-text">In my free time I love making vlogs, cycling, and playing bass guitar 🎸.</span>
-              <span class="bio-text" style="padding-top: 2%;">I'm now looking for full-time software engineer jobs
-                starting in 2022. You can
-                check
-                out my skill set
-                and past projects, and find me at
-                <a href="https://www.linkedin.com/in/shiqin-yan/" target="_blank" rel="noopener noreferrer"><img
-                    src="./linkedin.icon.png" id="linkedin-logo"></a> or
-                <a href="https://github.com/player-eric" target="_blank" rel="noopener noreferrer"><img
-                    src="./github.icon.png" id="github-logo"></a>.
-              </span>
-              <span class="bio-text">See my <a href="https://github.com/player-eric" style="font-weight:700"
-                  target="_blank" rel="noopener noreferrer">
-                  resume</a>
-                for more of my
-                professional experience.</span>
+        <div class="item profile-text">
+          <div class="bio">
+            <div class="name-sig">
+              <span id="name">Shiqin Yan </span>
+              <img src="./signature.png" id="signature">
             </div>
-          </div>
 
-          <div class="item project-detail">
-            <p>project</p>
+            <a href="mailto:shiqin_yan@brown.edu" target="_blank" rel="noopener noreferrer"
+              id="email">shiqin_yan@brown.edu</a>
+
+            <span class="bio-text">I'm Shiqn Yan (shyh-chin yahn), a master's student studying computer science
+              at <a href="https://cs.brown.edu/" target="_blank" rel="noopener noreferrer">
+                Brown University</a>. I’m passionate about solving various real-world
+              problems with my CS skills 🤔. </span>
+            <span class="bio-text">In my free time I love making vlogs, cycling, and playing bass guitar 🎸.</span>
+            <span class="bio-text" style="padding-top: 2%;">I'm now looking for full-time software engineer jobs
+              starting in 2022. You can
+              check
+              out my
+              <span onclick="toSkills()" class="jump-link">skill set</span>
+              and
+              <span onclick="toProjects()" class="jump-link">past projects</span>, and find me at
+              <a href="https://www.linkedin.com/in/shiqin-yan/" target="_blank" rel="noopener noreferrer"><img
+                  src="./linkedin.icon.png" id="linkedin-logo"></a> or
+              <a href="https://github.com/player-eric" target="_blank" rel="noopener noreferrer"><img
+                  src="./github.icon.png" id="github-logo"></a>.
+            </span>
+            <span class="bio-text">See my <a href="https://github.com/player-eric" style="font-weight:700"
+                target="_blank" rel="noopener noreferrer">
+                resume</a>
+              for more of my
+              professional experience.</span>
           </div>
         </div>
+
+        <div class="item skills-right">
+          <span id="skills-title-right">set</span>
+        </div>
+
+        <div class="item project-detail">
+          <p>project</p>
+        </div>
+
 
       </div>
     </div>
