sliding while styling working

--- a/html+css palyground/portfolio/index.html
+++ b/html+css palyground/portfolio/index.html
@@ -17,7 +17,6 @@
 
         <div class="item profile-photo">
           <img src="./selfie.jpeg" id="selfie">
-          <h1><a href="#">test</a></h1>
         </div>
 
         <div class="item skills-left">
@@ -42,6 +41,7 @@
           <div class="lists">
             <p>project list</p>
           </div>
+
         </div>
 
 
@@ -56,8 +56,8 @@
               <img src="./signature.png" id="signature">
             </div>
 
-            <a href="mailto:shiqin_yan@brown.edu" target="_blank" rel="noopener noreferrer"
-              id="email">shiqin_yan@brown.edu</a>
+            <a href="mailto:shiqin_yan@brown.edu" target="_blank" rel="noopener noreferrer" id="email"
+              style="text-underline-offset:5px">shiqin_yan@brown.edu</a>
 
             <span class="bio-text">I'm Shiqn Yan (shyh-chin yahn), a master's student studying computer science
               at <a href="https://cs.brown.edu/" target="_blank" rel="noopener noreferrer">
@@ -81,11 +81,24 @@
                 resume</a>
               for more of my
               professional experience.</span>
+
           </div>
+          <span id="profile-page-arrow" onclick="toSkills()">&#x21e9;</span>
         </div>
 
         <div class="item skills-right">
           <span id="skills-title-right">set</span>
+          <div class="skills-section">
+            <h1>Languages</h1>
+            <a href="#">test</a>
+            <div class="skills-icons">
+              <a href="https://www.linkedin.com/in/shiqin-yan/" target="_blank" rel="noopener noreferrer"><img
+                  src="./linkedin.icon.png" class="skill-icon"></a>
+              <a href="https://www.linkedin.com/in/shiqin-yan/" target="_blank" rel="noopener noreferrer"><img
+                  src="./linkedin.icon.png" class="skill-icon"></a>
+            </div>
+          </div>
+          <span id="skills-page-arrow" onclick="toProjects()">&#x21e9;</span>
         </div>
 
         <div class="item project-detail">
