finished skill set page

--- a/html+css palyground/portfolio/index.html
+++ b/html+css palyground/portfolio/index.html
@@ -23,13 +23,158 @@
           <span id="skills-title-left">Skill</span>
 
           <div class="skills-section">
-            <h1>Languages</h1>
-            <a href="#">test</a>
-            <div class="skills-icons">
-              <a href="https://www.linkedin.com/in/shiqin-yan/" target="_blank" rel="noopener noreferrer"><img
-                  src="./linkedin.icon.png" class="skill-icon"></a>
-              <a href="https://www.linkedin.com/in/shiqin-yan/" target="_blank" rel="noopener noreferrer"><img
-                  src="./linkedin.icon.png" class="skill-icon"></a>
+            <span class="skills-section-title">Languages</span>
+            <div class="skills-row">
+              <div class="single-skill">
+                <a href="https://en.wikipedia.org/wiki/C_(programming_language)" target="_blank"
+                  rel="noopener noreferrer"><img src="./images/icons/c-original.svg" class="skill-icon"></a>
+                <span class="skill-name">C</span>
+              </div>
+              <div class="single-skill">
+                <a href="https://www.cplusplus.com/" target="_blank" rel="noopener noreferrer"><img
+                    src="./images/icons/cplusplus-original.svg" class="skill-icon"></a>
+                <span class="skill-name">C++</span>
+              </div>
+              <div class="single-skill">
+                <a href="https://www.python.org/" target="_blank" rel="noopener noreferrer"><img
+                    src="./images/icons/python-original.svg" class="skill-icon"></a>
+                <span class="skill-name">Python</span>
+              </div>
+              <div class="single-skill">
+                <a href="https://www.javascript.com/" target="_blank" rel="noopener noreferrer"><img
+                    src="./images/icons/javascript-original.svg" class="skill-icon"></a>
+                <span class="skill-name" style="position: relative; left: -16px;">JavaScript</span>
+              </div>
+              <div class="single-skill">
+                <a href="https://www.typescriptlang.org/" target="_blank" rel="noopener noreferrer"><img
+                    src="./images/icons/typescript-original.svg" class="skill-icon"></a>
+                <span class="skill-name" style="position: relative; left: -16px;">TypeScript</span>
+              </div>
+            </div>
+            <div class="skills-row">
+              <div class="single-skill">
+                <a href="https://kotlinlang.org/" target="_blank" rel="noopener noreferrer"><img
+                    src="./images/icons/kotlin.svg" class="skill-icon"></a>
+                <span class="skill-name">Kotlin</span>
+              </div>
+              <div class="single-skill">
+                <a href="https://en.wikipedia.org/wiki/MATLAB" target="_blank" rel="noopener noreferrer"><img
+                    src="./images/icons/matlab.png" class="skill-icon"></a>
+                <span class="skill-name">Matlab</span>
+              </div>
+              <div class="single-skill">
+                <a href="https://en.wikipedia.org/wiki/SQL" target="_blank" rel="noopener noreferrer"><img
+                    src="./images/icons/sql.jpeg" class="skill-icon"></a>
+                <span class="skill-name">SQL</span>
+              </div>
+              <div class="single-skill"></div>
+              <div class="single-skill"></div>
+            </div>
+          </div>
+
+          <div class="skills-section">
+            <span class="skills-section-title">AI / ML / DS</span>
+            <div class="skills-row">
+              <div class="single-skill">
+                <a href="https://www.tensorflow.org/" target="_blank" rel="noopener noreferrer"><img
+                    src="./images/icons/tensorflow.svg" class="skill-icon"></a>
+                <span class="skill-name" style="position: relative; left: -20px;">TensorFlow</span>
+              </div>
+              <div class="single-skill">
+                <a href="https://pytorch.org/" target="_blank" rel="noopener noreferrer"><img
+                    src="./images/icons/pytorch.svg" class="skill-icon"></a>
+                <span class="skill-name" style="position: relative; left: -10px;">PyTorch</span>
+              </div>
+              <div class="single-skill">
+                <a href="https://keras.io/" target="_blank" rel="noopener noreferrer"><img
+                    src="./images/icons/keras.png" class="skill-icon"></a>
+                <span class="skill-name">Keras</span>
+              </div>
+              <div class="single-skill">
+                <a href="https://opencv.org/" target="_blank" rel="noopener noreferrer"><img
+                    src="./images/icons/opencv.svg" class="skill-icon"></a>
+                <span class="skill-name" style="position: relative; left: -10px;">OpenCV</span>
+              </div>
+              <div class="single-skill">
+                <a href="https://scikit-learn.org/" target="_blank" rel="noopener noreferrer"><img
+                    src="./images/icons/sklearn.svg" class="skill-icon"></a>
+                <span class="skill-name" style="position: relative; left: -10px;">sklearn</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="skills-section">
+            <span class="skills-section-title">Web / App Development</span>
+            <div class="skills-row">
+              <div class="single-skill">
+                <a href="https://reactjs.org/" target="_blank" rel="noopener noreferrer"><img
+                    src="./images/icons/react.svg" class="skill-icon"></a>
+                <span class="skill-name">React</span>
+              </div>
+              <div class="single-skill">
+                <a href="https://angular.io/" target="_blank" rel="noopener noreferrer"><img
+                    src="./images/icons/angular.png" class="skill-icon"></a>
+                <span class="skill-name" style="position: relative; left: -10px;">Angular</span>
+              </div>
+              <div class="single-skill">
+                <a href="https://vuejs.org/" target="_blank" rel="noopener noreferrer"><img src="./images/icons/vue.png"
+                    class="skill-icon"></a>
+                <span class="skill-name">Vue</span>
+              </div>
+              <div class="single-skill">
+                <a href="https://www.qt.io/" target="_blank" rel="noopener noreferrer"><img src="./images/icons/qt.svg"
+                    class="skill-icon"></a>
+                <span class="skill-name">Qt</span>
+              </div>
+
+              <div class="single-skill">
+                <a href="https://getbootstrap.com/" target="_blank" rel="noopener noreferrer"><img
+                    src="./images/icons/bootstrap.svg" class="skill-icon"></a>
+                <span class="skill-name" style="position: relative; left: -14px;">Bootstrap</span>
+              </div>
+            </div>
+            <div class="skills-row">
+              <div class="single-skill">
+                <a href="https://expressjs.com/" target="_blank" rel="noopener noreferrer"><img
+                    src="./images/icons/express.svg" class="skill-icon"></a>
+                <span class="skill-name" style="position: relative; left: -10px;">Express</span>
+              </div>
+              <div class="single-skill">
+                <a href="https://flask.palletsprojects.com/" target="_blank" rel="noopener noreferrer"><img
+                    src="./images/icons/flask.svg" class="skill-icon"></a>
+                <span class="skill-name" style="position: relative; left: -2px;">Flask</span>
+              </div>
+              <div class="single-skill">
+                <a href="https://nativescript.org/" target="_blank" rel="noopener noreferrer"><img
+                    src="./images/icons/nativescript.svg" class="skill-icon"></a>
+                <span class="skill-name" style="position: relative; left: -26px;">NativeScript</span>
+              </div>
+              <div class="single-skill">
+                <a href="https://redux.js.org/" target="_blank" rel="noopener noreferrer"><img
+                    src="./images/icons/redux.svg" class="skill-icon"></a>
+                <span class="skill-name" style="position: relative; left: -5px;">Redux</span>
+              </div>
+
+              <div class="single-skill">
+                <a href="https://www.nginx.com/" target="_blank" rel="noopener noreferrer"><img
+                    src="./images/icons/nginx.svg" class="skill-icon"></a>
+                <span class="skill-name">Nginx</span>
+              </div>
+            </div>
+            <div class="skills-row">
+              <div class="single-skill">
+                <a href="https://nodejs.org/" target="_blank" rel="noopener noreferrer"><img
+                    src="./images/icons/nodejs.svg" class="skill-icon"></a>
+                <span class="skill-name" style="position: relative; left: -5px;">Node</span>
+              </div>
+              <div class="single-skill">
+                <a href="https://handlebarsjs.com/" target="_blank" rel="noopener noreferrer"><img
+                    src="./images/icons/handlebars.png" class="skill-icon"></a>
+                <span class="skill-name" style="position: relative; left: -20px;">Handlebars</span>
+              </div>
+              <div class="single-skill"></div>
+              <div class="single-skill"></div>
+              <div class="single-skill"></div>
             </div>
           </div>
 
@@ -81,23 +226,92 @@
                 resume</a>
               for more of my
               professional experience.</span>
-
           </div>
+          <img src="./images/simao.GIF" id="simao-img">
           <span id="profile-page-arrow" onclick="toSkills()">&#x21e9;</span>
         </div>
 
         <div class="item skills-right">
-          <span id="skills-title-right">set</span>
+          <span id="skills-title-right">Set</span>
+
           <div class="skills-section">
-            <h1>Languages</h1>
-            <a href="#">test</a>
-            <div class="skills-icons">
-              <a href="https://www.linkedin.com/in/shiqin-yan/" target="_blank" rel="noopener noreferrer"><img
-                  src="./linkedin.icon.png" class="skill-icon"></a>
-              <a href="https://www.linkedin.com/in/shiqin-yan/" target="_blank" rel="noopener noreferrer"><img
-                  src="./linkedin.icon.png" class="skill-icon"></a>
+            <span class="skills-section-title">Database</span>
+            <div class="skills-row">
+              <div class="single-skill">
+                <a href="https://www.mysql.com/" target="_blank" rel="noopener noreferrer"><img
+                    src="./images/icons/mysql.png" class="skill-icon"></a>
+                <span class="skill-name">MySQL</span>
+              </div>
+              <div class="single-skill">
+                <a href="https://www.mongodb.com/" target="_blank" rel="noopener noreferrer"><img
+                    src="./images/icons/mongodb.png" class="skill-icon"></a>
+                <span class="skill-name" style="position: relative; left: -15px;">MongoDB</span>
+              </div>
+              <div class="single-skill">
+                <a href="https://www.postgresql.org/" target="_blank" rel="noopener noreferrer"><img
+                    src="./images/icons/postgresql.png" class="skill-icon"></a>
+                <span class="skill-name" style="position: relative; left: -20px;">PostgreSQL</span>
+              </div>
+              <div class="single-skill">
+                <a href="https://neo4j.com/" target="_blank" rel="noopener noreferrer"><img
+                    src="./images/icons/neo4j.png" class="skill-icon"></a>
+                <span class="skill-name">Neo4j</span>
+              </div>
+              <div class="single-skill"></div>
             </div>
           </div>
+
+          <div class="skills-section">
+            <span class="skills-section-title">Tools</span>
+            <div class="skills-row">
+              <div class="single-skill">
+                <a href="https://www.docker.com/" target="_blank" rel="noopener noreferrer"><img
+                    src="./images/icons/docker.png" class="skill-icon"></a>
+                <span class="skill-name" style="position: relative; left: -5px;">Docker</span>
+              </div>
+              <div class="single-skill">
+                <a href="https://travis-ci.org/" target="_blank" rel="noopener noreferrer"><img
+                    src="./images/icons/travis.png" class="skill-icon"></a>
+                <span class="skill-name" style="position: relative; left: -10px;">Travis&nbspCI</span>
+              </div>
+              <div class="single-skill">
+                <a href="https://www.postman.com/" target="_blank" rel="noopener noreferrer"><img
+                    src="./images/icons/postman.png" class="skill-icon"></a>
+                <span class="skill-name" style="position: relative; left: -10px;">Postman</span>
+              </div>
+              <div class="single-skill">
+                <a href="https://git-scm.com/" target="_blank" rel="noopener noreferrer"><img
+                    src="./images/icons/git.png" class="skill-icon"></a>
+                <span class="skill-name">Git</span>
+              </div>
+              <div class="single-skill">
+                <a href="https://threejs.org/" target="_blank" rel="noopener noreferrer"><img
+                    src="./images/icons/three.png" class="skill-icon"></a>
+                <span class="skill-name" style="position: relative; left: -10px;">Three.js</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="skills-section">
+            <span class="skills-section-title">Softwares</span>
+            <div class="skills-row">
+              <div class="single-skill">
+                <a href="https://en.wikipedia.org/wiki/Adobe_Photoshop" target="_blank" rel="noopener noreferrer"><img
+                    src="./images/icons/ps.png" class="skill-icon"></a>
+                <span class="skill-name" style="position: relative; left: -12px;">Photoshop</span>
+              </div>
+              <div class="single-skill">
+                <a href="https://www.apple.com/final-cut-pro/" target="_blank" rel="noopener noreferrer"><img
+                    src="./images/icons/finalcutpro.png" class="skill-icon"></a>
+                <span class="skill-name" style="position: relative; left: -20px;">Final&nbspCut&nbspPro</span>
+              </div>
+              <div class="single-skill"></div>
+              <div class="single-skill"></div>
+              <div class="single-skill"></div>
+            </div>
+          </div>
+
+          <div class="skills-page-triangle"></div>
           <span id="skills-page-arrow" onclick="toProjects()">&#x21e9;</span>
         </div>
 
