fixed photo card blinking bug, ready to use Angular

--- a/html+css palyground/portfolio/index.html
+++ b/html+css palyground/portfolio/index.html
@@ -16,7 +16,9 @@
       <div class="left-section">
 
         <div class="item profile-photo">
-          <img src="./selfie.jpeg" id="selfie">
+          <div class="profile-photo-card">
+            <img src="./selfie.jpeg" id="selfie">
+          </div>
         </div>
 
         <div class="item skills-left">
@@ -300,11 +302,13 @@
                     src="./images/icons/ps.png" class="skill-icon"></a>
                 <span class="skill-name" style="position: relative; left: -12px;">Photoshop</span>
               </div>
+              <div class="single-skill"></div>
               <div class="single-skill">
                 <a href="https://www.apple.com/final-cut-pro/" target="_blank" rel="noopener noreferrer"><img
                     src="./images/icons/finalcutpro.png" class="skill-icon"></a>
                 <span class="skill-name" style="position: relative; left: -20px;">Final&nbspCut&nbspPro</span>
               </div>
+              <div class="single-skill"></div>
               <div class="single-skill"></div>
               <div class="single-skill"></div>
               <div class="single-skill"></div>
