ready to implement projects

--- a/portfolio/src/index.html
+++ b/portfolio/src/index.html
@@ -5,7 +5,9 @@
     <meta charset="utf-8">
     <title>About - Shiqin Yan</title>
     <base href="/">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="About - Shiqin Yan">
+    <meta name="keywords" content="Shiqin Yan portfolio">
+    <meta name="author" content="Shiqin Yan">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
 
